k8s/velero-ui/templates/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: velero-ui-network-policy
  namespace: velero
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: otwld-velero-ui
      app.kubernetes.io/instance: otwld-velero-ui
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 80
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: velero
              app.kubernetes.io/instance: velero
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: velero
      ports:
        - protocol: TCP
          port: 8080
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 443
